--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,67 @@ header .container-base p {
     background-size: cover;
 }
 
+.banner-formulario .container-base {
+    padding: 40px 0px;
+}
+
+.banner-formulario .titulo-form {
+    width: 100%;
+    display: flex;
+    padding: 5px 0px;
+
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+    background-color: var(--roxo);
+    color: white;
+    font-size: 13px;
+}
+
+.banner-formulario h2 {
+    background-color: white;
+    padding: 20px 20px;
+}
+
+.banner-formulario img {
+    width: 30px;
+    rotate: -45deg;
+}
+
+.banner-formulario form {
+    width: 100%;
+    background-color: white;
+}
+
+.banner-formulario .form-div {
+    padding: 5px 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.banner-formulario .form-div-menor {
+    display: flex;
+    flex-wrap: wrap;
+
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.banner-formulario .form-div-menor .menor {
+    width: 48%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px 20px;
+}
+
+.menor input, .menor select {
+    width: 100%;
+}
+
+input, select {
+    padding: 5px;
+}
