--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,16 @@
     padding: 0px 10px;
 }
 
+main {
+    background-color: rgb(240, 233, 233);
+}
+
 img {
     object-fit: cover;
+}
+
+h3 {
+    margin: 25px auto 10px;
 }
 
 /* header */
@@ -50,7 +58,8 @@ header .container-base p {
 }
 
 /* Banner-formulario */
-input, select {
+input,
+select {
     padding: 5px;
 }
 
@@ -118,7 +127,8 @@ input, select {
     padding: 10px 20px;
 }
 
-.menor input, .menor select {
+.menor input,
+.menor select {
     width: 100%;
 }
 
@@ -145,12 +155,12 @@ input, select {
     gap: 10px;
 }
 
-.banner-formulario .form-check div{
+.banner-formulario .form-check div {
     display: flex;
     gap: 5px;
 }
 
-.banner-formulario .form-check label{
+.banner-formulario .form-check label {
     margin-right: 15px;
 }
 
@@ -161,4 +171,118 @@ button {
     border: none;
     color: white;
     font-size: 17px;
+}
+
+button:hover {
+    background-color: #190538;
+}
+
+/* ofertas */
+.ofertas p {
+    margin-bottom: 10px;
+}
+
+.ofertas .galeria-img {
+    width: 100%;
+    height: 350px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.galeria-img .img-grande {
+    width: calc(50% - 10px);
+    height: 100%;
+}
+
+.galeria-img .img-grande figure {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.galeria-img .img-mini {
+    width: calc(50% - 10px);
+    height: 100%;
+
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.galeria-img .img-mini figure {
+    position: relative;
+    width: calc(50% - 10px);
+    height: calc(50% - 10px);
+    margin: 0 6px;
+}
+
+.galeria-img .img-grande img, .galeria-img .img-mini img {
+    width: 100%;
+    height: 100%;
+}
+
+.galeria-img .img-grande figcaption, .galeria-img .img-mini figcaption {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    width: 100%;
+    font-size: 17px;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0.514);
+
+    padding: 5px 10px;
+    box-sizing: border-box;
+}
+
+/* anuncio */
+.anuncio h4 {
+    font-size: 16px;
+}
+
+.anuncio p {
+    margin: 10px auto;
+    color: gray;
+}
+
+.anuncio-div {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+}
+
+.anuncio .galeria-img {
+    width: 100%;
+    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.anuncio-div div {
+    background-color: white;
+    padding: 10px;
+}
+
+/* footer */
+
+footer {
+    background-color: var(--roxo);
+    color: white;
+}
+
+footer .container-base {
+    display: flex;
+    justify-content: space-between;
+}
+
+footer p {
+    margin: 15px auto;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+footer img {
+    width: 20px;
 }
